# atlas

./: .dockerignore  .envrc  .gitignore  .gitmodules  .mailmap  .travis.yml  ARTIFACT.md  CITATION.cff  Dockerfile  README.md  atlas.jsh  atlas.properties  bench-day.sh  bench-missing.sh  bench-single.sh  bench.sh  build.gradle.kts  buildscript-gradle.lockfile  evaluate-fast.sh  evaluate-faster.sh  evaluate-slow.sh  evaluate.sh  flake.nix  gradle-env.json  gradle-env.nix  gradle.lockfile  gradle.properties  jshell.sh  lac.jsh  lac.properties  reproduce.sh  scratch.hs  settings.gradle.kts  tacas.sh  version.sh
.github/workflows/: build.yml  gradle.yml  nix.yml
doc/: .gitignore  build-thesis.sh  misc.bib
interpreter/: .gitignore  InterpreterPrelude.hs  Main.hs  Setup.hs  Tree.hs  build.sh  generate.sh  interpreter.cabal  package.yaml  stack.yaml
interpreter/app/: Main.hs
interpreter/src/: InterpreterPrelude.hs  Main.hs
spec/: .gitignore  Makefile  ROOT  Scratch.thy  hello.lean  hello.lean4  leanpkg.toml  splay.ott  syntax.ott
src/main/resources/: log4j2.xml
src/test/resources/: append_left.ml  append_left_reverse.ml  append_right.ml  append_right_reverse.ml  contains_unordered.ml  delete  descend.ml  descend_left.ml  descend_left_on_first.ml  descend_left_on_second.ml  descend_right.ml  descend_variant.ml  (+19 more)
tacas/: Readme.txt
thesis/: .gitignore  compcourse.txt  dblp.bib  mathscinet.bib  refs.txt  thesis.tex
typechecker/: .envrc  build.gradle.kts  jshell.sh  lac.properties  lel.gv  settings.gradle.kts  shell.nix  tacas.sh
typechecker/tacas/: Readme.txt
(+806 files in other folders)
