name:                interpreter
version:             0.1.0.0
-- synopsis:
-- description:
license:             GPL-3
license-file:        LICENSE
author:              Lorenz Leutgeb
maintainer:          lorenz@leutgeb.xyz
-- copyright:
-- category:
build-type:          Simple
cabal-version:       >=1.10

library
  -- exposed-modules:
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.11 && <4.12
  -- hs-source-dirs:
  default-language:    Haskell2010

executable interpreter
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.11 && <4.12
  hs-source-dirs:      src, generated-src
  default-language:    Haskell2010
  extensions:          GADTs, FlexibleContexts
